feat(miraflores): Agrega ubicaciones en el mapa - Manual Ambiental - Gestión integral del agua

--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -5355,13 +5355,19 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-8">
                                         <span
-                                            style="--outline-color: #8d12ff; left: 604px; top: 298px;"
+                                            style="--outline-color: #8d12ff; left: 298px; top: 378px;"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #8d12ff; left: 623px; top: 397px;"
+                                            style="--outline-color: #8d12ff; left: 341px; top: 332px;"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #8d12ff; left: 603px; top: 394px;"
+                                            style="--outline-color: #8d12ff; left: 408px; top: 440px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #8d12ff; left: 481px; top: 343px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #8d12ff; left: 639px; top: 428px;"
                                             class="location-map-dot"></span>
                                     </div>
 
@@ -5369,7 +5375,7 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-9">
                                         <span
-                                            style="--outline-color: #5dffa5; left: 623px; top: 377px;"
+                                            style="--outline-color: #5dffa5; left: 696px; top: 296px;"
                                             class="location-map-dot"></span>
                                     </div>
 
@@ -5377,7 +5383,10 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-10">
                                         <span
-                                            style="--outline-color: #fc10ff; left: 860px; top: 269px;"
+                                            style="--outline-color: #fc10ff; left: 555px; top: 216px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #fc10ff; left: 936px; top: 305px;"
                                             class="location-map-dot"></span>
                                     </div>
 
@@ -5385,7 +5394,7 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-11">
                                         <span
-                                            style="--outline-color: #f9a8ff; left: 630px; top: 393px"
+                                            style="--outline-color: #f9a8ff; left: 698px; top: 288px"
                                             class="location-map-dot"></span>
                                     </div>
 
