--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -5448,7 +5448,7 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-14">
                                         <span
-                                            style="--outline-color: #a59eff; left: 441px; top: 252px;"
+                                            style="--outline-color: #a59eff; left: 474px; top: 341px;"
                                             class="location-map-dot"></span>
                                     </div>
 
@@ -5456,7 +5456,22 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-15">
                                         <span
-                                            style="--outline-color: #ffa921; left: 580px; top: 283px;"
+                                            style="--outline-color: #ffa921; left: 340px; top: 331px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ffa921; left: 581px; top: 336px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ffa921; left: 643px; top: 314px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ffa921; left: 675px; top: 307px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ffa921; left: 699px; top: 298px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ffa921; left: 723px; top: 290px;"
                                             class="location-map-dot"></span>
                                     </div>
 
