--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -5073,7 +5073,93 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-sre-17">
                                         <span
-                                            style="--outline-color: #00ccff; left: 389px; top: 442px"
+                                            style="left: 272px; top: 377px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 265px; top: 346px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 318px; top: 340px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 311px; top: 371px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 362px; top: 304px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 400px; top: 284px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 412px; top: 311px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 427px; top: 334px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 441px; top: 257px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 503px; top: 257px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 527px; top: 243px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 642px; top: 297px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 655px; top: 321px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 726px; top: 315px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                    </div>
+
+                                    <div
+                                        class="dots-map-2024 dots-monitoreo d-none"
+                                        id="cusiana-sre-18">
+                                        <span
+                                            style="left: 283px; top: 371px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 283px; top: 335px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 328px; top: 341px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 328px; top: 371px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 362px; top: 304px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 410px; top: 273px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 403px; top: 297px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 461px; top: 349px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 447px; top: 254px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 516px; top: 267px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 552px; top: 255px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 679px; top: 324px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 733px; top: 317px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="left: 640px; top: 297px; border-color: #27ff00; background-color: white; width: 12px; height: 12px;"
                                             class="location-map-dot"></span>
                                     </div>
 
