--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -3890,7 +3890,7 @@
                                     <div id="accordion-item-primeros-auxilios"
                                         class="accordion-item row mt-lg-3">
                                         <div class="col-12 col-lg-6">
-                                            <div data-target="cusiana-sre-17"
+                                            <div data-target="cusiana-sre-19"
                                                 style="gap: 16px"
                                                 class="d-flex align-items-center card-interactive-icons__container">
                                                 <div
@@ -3939,7 +3939,83 @@
                                                 </div>
                                             </div>
 
-                                            <div data-target="cusiana-sre-18"
+                                            <div data-target="cusiana-sre-20"
+                                                style="gap: 16px"
+                                                class="d-flex align-items-center card-interactive-icons__container mt-2">
+                                                <div
+                                                    class="card-interactive-icons___box-icon"
+                                                    style="--border-fill: #ff0000; --hover-color: #ffffff">
+                                                    <svg data-name="Grupo 674"
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                        width="29.418"
+                                                        height="24.936"
+                                                        viewBox="0 0 29.418 24.936">
+                                                        <defs>
+                                                            <clippath
+                                                                id="rrtv9ot34a">
+                                                                <path
+                                                                    data-name="Rectángulo 184"
+                                                                    style="fill: #707070"
+                                                                    d="M0 0h29.418v24.936H0z" />
+                                                            </clippath>
+                                                        </defs>
+                                                        <g data-name="Grupo 673"
+                                                            style="clip-path: url(#rrtv9ot34a)">
+                                                            <path
+                                                                data-name="Trazado 1185"
+                                                                d="M28.758 13.775h-2.62l1.081-1.081a7.439 7.439 0 0 0 1.689-8A7.161 7.161 0 0 0 22.583.016 9.776 9.776 0 0 0 22.067 0a8.827 8.827 0 0 0-7.358 4 8.823 8.823 0 0 0-7.358-4C7.178 0 7 .007 6.835.016A7.161 7.161 0 0 0 .51 4.7a7.433 7.433 0 0 0 1.689 8l1.081 1.075H.66a.653.653 0 1 0 0 1.307h3.927l9.661 9.661a.647.647 0 0 0 .921 0l9.661-9.661h3.927a.653.653 0 0 0 0-1.307M3.123 11.769a6.149 6.149 0 0 1-1.392-6.61A5.785 5.785 0 0 1 6.91 1.32c.147-.01.294-.013.441-.013a7.511 7.511 0 0 1 6.767 4.31.653.653 0 0 0 1.183 0 7.511 7.511 0 0 1 6.767-4.31c.147 0 .294 0 .441.013a5.794 5.794 0 0 1 5.179 3.839 6.137 6.137 0 0 1-1.392 6.61l-2 2.006h-2.915l-1.807-5.12a.656.656 0 0 0-1.235 0l-1.807 5.12h-2.15a.653.653 0 0 0-.559.317l-1.075 1.79-1.643-8.763a.652.652 0 0 0-1.271-.052L8 13.775H5.126zm11.586 11.589-8.276-8.276H8.5a.654.654 0 0 0 .631-.48l1.212-4.444 1.438 7.659a.65.65 0 0 0 .526.523.675.675 0 0 0 .114.01.65.65 0 0 0 .559-.317l1.771-2.95H17a.66.66 0 0 0 .618-.435l1.343-3.81 1.343 3.81a.66.66 0 0 0 .618.435h2.068z"
+                                                                style="fill: #707070" />
+                                                        </g>
+                                                    </svg>
+                                                </div>
+                                                <div
+                                                    class="card-interactive-icons___box-description">
+                                                    <p>DEA</p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-12 col-lg-6">
+                                            <div data-target="cusiana-sre-21"
+                                                style="gap: 16px"
+                                                class="d-flex align-items-center card-interactive-icons__container">
+                                                <div
+                                                    class="card-interactive-icons___box-icon"
+                                                    style="--border-fill: #ffd800; --hover-color: #ffffff">
+                                                    <svg
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                        width="25.312"
+                                                        height="25.396"
+                                                        viewBox="0 0 25.312 25.396">
+                                                        <defs>
+                                                            <clippath
+                                                                id="oizah3zaia">
+                                                                <path
+                                                                    data-name="Rectángulo 159"
+                                                                    style="fill: #707070"
+                                                                    d="M0 0h25.312v25.396H0z" />
+                                                            </clippath>
+                                                        </defs>
+                                                        <g
+                                                            data-name="Grupo 639">
+                                                            <g
+                                                                data-name="Grupo 638"
+                                                                style="clip-path: url(#oizah3zaia)">
+                                                                <path
+                                                                    data-name="Trazado 850"
+                                                                    d="M24.766 13.665a.556.556 0 0 0 .546-.547.548.548 0 0 0-.546-.5h-3.154V5.424c3.154.883 3.027.883 3.154.883a.589.589 0 0 0 .5-.379.482.482 0 0 0-.379-.631l-3.28-.925V.547A.556.556 0 0 0 21.065 0h-4.709a.557.557 0 0 0-.547.547v4.2c0 .294-1.093.842-3.153.842S9.5 5.045 9.5 4.751V.547A.556.556 0 0 0 8.956 0H4.247A.556.556 0 0 0 3.7.547v3.826L.421 5.3a.55.55 0 0 0-.378.631.551.551 0 0 0 .63.379L3.7 5.466v7.148H.547a.547.547 0 1 0 0 1.093H3.7v3.7H.547a.547.547 0 1 0 0 1.093H3.7v5.8H2.649a.547.547 0 1 0 0 1.093h7.9a.547.547 0 0 0 0-1.093H9.5v-5.884h6.31v5.8h-1.051a.547.547 0 1 0 0 1.093h7.9a.547.547 0 0 0 0-1.093h-1.047v-5.8h3.154a.547.547 0 0 0 0-1.093h-3.154v-3.7h3.154zm-7.9-12.614h3.7v11.563h-3.7zM15.81 6.1v6.517H9.5V6.1a9.543 9.543 0 0 0 6.307 0M4.793 1.051h3.659v11.563h-3.7V1.051zm0 12.614h3.659v3.7h-3.7v-3.7zm3.659 10.512h-3.7v-5.76h3.7zM9.5 13.665h6.31v3.7H9.5zm11.061 10.512h-3.7v-5.76h3.7zm0-6.811h-3.7v-3.7h3.7z"
+                                                                    style="fill: #707070" />
+                                                            </g>
+                                                        </g>
+                                                    </svg>
+                                                </div>
+                                                <div
+                                                    class="card-interactive-icons___box-description">
+                                                    <p>Cerramiento</p>
+                                                </div>
+                                            </div>                                            
+
+                                            <div data-target="cusiana-sre-22"
                                                 style="gap: 16px"
                                                 class="d-flex align-items-center card-interactive-icons__container mt-2">
                                                 <div
@@ -3977,82 +4053,6 @@
                                                 <div
                                                     class="card-interactive-icons___box-description">
                                                     <p>Botiquin</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-12 col-lg-6">
-                                            <div data-target="cusiana-sre-19"
-                                                style="gap: 16px"
-                                                class="d-flex align-items-center card-interactive-icons__container">
-                                                <div
-                                                    class="card-interactive-icons___box-icon"
-                                                    style="--border-fill: #ffd800; --hover-color: #ffffff">
-                                                    <svg
-                                                        xmlns="http://www.w3.org/2000/svg"
-                                                        width="25.312"
-                                                        height="25.396"
-                                                        viewBox="0 0 25.312 25.396">
-                                                        <defs>
-                                                            <clippath
-                                                                id="oizah3zaia">
-                                                                <path
-                                                                    data-name="Rectángulo 159"
-                                                                    style="fill: #707070"
-                                                                    d="M0 0h25.312v25.396H0z" />
-                                                            </clippath>
-                                                        </defs>
-                                                        <g
-                                                            data-name="Grupo 639">
-                                                            <g
-                                                                data-name="Grupo 638"
-                                                                style="clip-path: url(#oizah3zaia)">
-                                                                <path
-                                                                    data-name="Trazado 850"
-                                                                    d="M24.766 13.665a.556.556 0 0 0 .546-.547.548.548 0 0 0-.546-.5h-3.154V5.424c3.154.883 3.027.883 3.154.883a.589.589 0 0 0 .5-.379.482.482 0 0 0-.379-.631l-3.28-.925V.547A.556.556 0 0 0 21.065 0h-4.709a.557.557 0 0 0-.547.547v4.2c0 .294-1.093.842-3.153.842S9.5 5.045 9.5 4.751V.547A.556.556 0 0 0 8.956 0H4.247A.556.556 0 0 0 3.7.547v3.826L.421 5.3a.55.55 0 0 0-.378.631.551.551 0 0 0 .63.379L3.7 5.466v7.148H.547a.547.547 0 1 0 0 1.093H3.7v3.7H.547a.547.547 0 1 0 0 1.093H3.7v5.8H2.649a.547.547 0 1 0 0 1.093h7.9a.547.547 0 0 0 0-1.093H9.5v-5.884h6.31v5.8h-1.051a.547.547 0 1 0 0 1.093h7.9a.547.547 0 0 0 0-1.093h-1.047v-5.8h3.154a.547.547 0 0 0 0-1.093h-3.154v-3.7h3.154zm-7.9-12.614h3.7v11.563h-3.7zM15.81 6.1v6.517H9.5V6.1a9.543 9.543 0 0 0 6.307 0M4.793 1.051h3.659v11.563h-3.7V1.051zm0 12.614h3.659v3.7h-3.7v-3.7zm3.659 10.512h-3.7v-5.76h3.7zM9.5 13.665h6.31v3.7H9.5zm11.061 10.512h-3.7v-5.76h3.7zm0-6.811h-3.7v-3.7h3.7z"
-                                                                    style="fill: #707070" />
-                                                            </g>
-                                                        </g>
-                                                    </svg>
-                                                </div>
-                                                <div
-                                                    class="card-interactive-icons___box-description">
-                                                    <p>Cerramiento</p>
-                                                </div>
-                                            </div>
-
-                                            <div data-target="cusiana-sre-20"
-                                                style="gap: 16px"
-                                                class="d-flex align-items-center card-interactive-icons__container mt-2">
-                                                <div
-                                                    class="card-interactive-icons___box-icon"
-                                                    style="--border-fill: #ff0000; --hover-color: #ffffff">
-                                                    <svg data-name="Grupo 674"
-                                                        xmlns="http://www.w3.org/2000/svg"
-                                                        width="29.418"
-                                                        height="24.936"
-                                                        viewBox="0 0 29.418 24.936">
-                                                        <defs>
-                                                            <clippath
-                                                                id="rrtv9ot34a">
-                                                                <path
-                                                                    data-name="Rectángulo 184"
-                                                                    style="fill: #707070"
-                                                                    d="M0 0h29.418v24.936H0z" />
-                                                            </clippath>
-                                                        </defs>
-                                                        <g data-name="Grupo 673"
-                                                            style="clip-path: url(#rrtv9ot34a)">
-                                                            <path
-                                                                data-name="Trazado 1185"
-                                                                d="M28.758 13.775h-2.62l1.081-1.081a7.439 7.439 0 0 0 1.689-8A7.161 7.161 0 0 0 22.583.016 9.776 9.776 0 0 0 22.067 0a8.827 8.827 0 0 0-7.358 4 8.823 8.823 0 0 0-7.358-4C7.178 0 7 .007 6.835.016A7.161 7.161 0 0 0 .51 4.7a7.433 7.433 0 0 0 1.689 8l1.081 1.075H.66a.653.653 0 1 0 0 1.307h3.927l9.661 9.661a.647.647 0 0 0 .921 0l9.661-9.661h3.927a.653.653 0 0 0 0-1.307M3.123 11.769a6.149 6.149 0 0 1-1.392-6.61A5.785 5.785 0 0 1 6.91 1.32c.147-.01.294-.013.441-.013a7.511 7.511 0 0 1 6.767 4.31.653.653 0 0 0 1.183 0 7.511 7.511 0 0 1 6.767-4.31c.147 0 .294 0 .441.013a5.794 5.794 0 0 1 5.179 3.839 6.137 6.137 0 0 1-1.392 6.61l-2 2.006h-2.915l-1.807-5.12a.656.656 0 0 0-1.235 0l-1.807 5.12h-2.15a.653.653 0 0 0-.559.317l-1.075 1.79-1.643-8.763a.652.652 0 0 0-1.271-.052L8 13.775H5.126zm11.586 11.589-8.276-8.276H8.5a.654.654 0 0 0 .631-.48l1.212-4.444 1.438 7.659a.65.65 0 0 0 .526.523.675.675 0 0 0 .114.01.65.65 0 0 0 .559-.317l1.771-2.95H17a.66.66 0 0 0 .618-.435l1.343-3.81 1.343 3.81a.66.66 0 0 0 .618.435h2.068z"
-                                                                style="fill: #707070" />
-                                                        </g>
-                                                    </svg>
-                                                </div>
-                                                <div
-                                                    class="card-interactive-icons___box-description">
-                                                    <p>DEA</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -5167,7 +5167,23 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-sre-19">
                                         <span
-                                            style="--outline-color: #ff0000; left: 389px; top: 439px"
+                                            style="--outline-color: #a80a0a; left: 735px; top: 373px"
+                                            class="location-map-dot"></span>
+                                    </div>
+
+                                    <div
+                                        class="dots-map-2024 dots-monitoreo d-none"
+                                        id="cusiana-sre-20">
+                                        <span
+                                            style="--outline-color: #ff0000; left: 743px; top: 368px"
+                                            class="location-map-dot"></span>
+                                    </div>
+
+                                    <div
+                                        class="dots-map-2024 dots-monitoreo d-none"
+                                        id="cusiana-sre-22">
+                                        <span
+                                            style="--outline-color: #00ccff; left: 743px; top: 373px"
                                             class="location-map-dot"></span>
                                     </div>
                                 </div>
