feat(miraflores): Actualiza los textos de los items

--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -3585,8 +3585,7 @@
                                                     <div
                                                         class="card-interactive-icons___box-description">
                                                         <p>
-                                                            Gabinete <br />
-                                                            Contraincendio
+                                                            Cerramiento
                                                         </p>
                                                     </div>
                                                 </div>
@@ -3595,7 +3594,7 @@
 
                                         <h5 style="font-size: 14px"
                                             class="text-gray-light-ocensa mt-4">
-                                            Off Shore - Hidrante
+                                            Hidrante
                                         </h5>
                                         <div class="row mt-3">
                                             <div class="col-12 col-lg-6">
@@ -3659,11 +3658,9 @@
                                                     <div
                                                         class="card-interactive-icons___box-description">
                                                         <p>
-                                                            Hidrante Monitor
+                                                            Hidrante 
                                                             <br />
-                                                            de Agua / Simple
-                                                            <br />
-                                                            de Agua
+                                                            Monitor de Agua
                                                         </p>
                                                     </div>
                                                 </div>
@@ -3671,7 +3668,7 @@
                                                 <div
                                                     data-target="cusiana-sre-16"
                                                     style="gap: 16px"
-                                                    class="d-flex align-items-center card-interactive-icons__container">
+                                                    class="d-flex align-items-center card-interactive-icons__container mt-2">
                                                     <div
                                                         class="card-interactive-icons___box-icon"
                                                         style="--border-fill: #ff0000">
@@ -3728,11 +3725,9 @@
                                                     <div
                                                         class="card-interactive-icons___box-description">
                                                         <p>
-                                                            Hidrante Monitor
+                                                            Hidrante
                                                             <br />
-                                                            de Agua / Simple
-                                                            <br />
-                                                            de Agua
+                                                            Simple de Agua
                                                         </p>
                                                     </div>
                                                 </div>
@@ -3796,9 +3791,7 @@
                                                         <p>
                                                             Hidrante Monitor
                                                             <br />
-                                                            de Espuma/ Simple
-                                                            <br />
-                                                            de Agua
+                                                            de Espuma
                                                         </p>
                                                     </div>
                                                 </div>
@@ -3806,7 +3799,7 @@
                                                 <div
                                                     data-target="cusiana-sre-18"
                                                     style="gap: 16px"
-                                                    class="d-flex align-items-center card-interactive-icons__container">
+                                                    class="d-flex align-items-center card-interactive-icons__container mt-2">
                                                     <div
                                                         class="card-interactive-icons___box-icon"
                                                         style="--border-fill: #27ff00">
@@ -3858,11 +3851,9 @@
                                                     <div
                                                         class="card-interactive-icons___box-description">
                                                         <p>
-                                                            Hidrante Monitor
+                                                            Hidrante
                                                             <br />
-                                                            de Espuma/ Simple
-                                                            <br />
-                                                            de Agua
+                                                            Simple de Espuma
                                                         </p>
                                                     </div>
                                                 </div>
@@ -4752,6 +4743,42 @@
 
                                     <div
                                         class="dots-map-2024 dots-monitoreo d-none"
+                                        id="cusiana-sre-6">
+                                        <span
+                                            style="scale: 0.88; position: absolute; left: 568px; top: 272px"
+                                            class="location-map-zona">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="184.024"
+                                                height="295.617" viewBox="0 0 184.024 295.617">
+                                                <defs>
+                                                <clippath id="5ax0n8lr7a">
+                                                    <path data-name="Rectángulo 308"
+                                                    style="stroke:#707070;fill:none;stroke-width:2px"
+                                                    d="M0 0h184.024v295.617H0z" />
+                                                </clippath>
+                                                </defs>
+                                                <g data-name="Grupo 899">
+                                                <g data-name="Grupo 898"
+                                                    style="clip-path:url(#5ax0n8lr7a)">
+                                                    <path data-name="Trazado 2148"
+                                                    d="m.435 295.818 35.707-63.012L58.2 201.3l52.51-59.861 66.163-90.3 7.352-43.043-7.356-7.75"
+                                                    transform="translate(-.328 -.261)"
+                                                    style="stroke:#ff2727;stroke-miterlimit:10;fill:none;stroke-width:2px" />
+                                                </g>
+                                                </g>
+                                            </svg>
+                                        </span>
+                                    </div>
+
+                                    <div
+                                        class="dots-map-2024 dots-monitoreo d-none"
+                                        id="cusiana-sre-7">
+                                        <!-- <span
+                                            style="--outline-color: #ff7171; left: 915px; top: 302px"
+                                            class="location-map-dot"></span> -->
+                                    </div>
+
+                                    <div
+                                        class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-sre-10">
                                         <span
                                             style="--outline-color: #27ff00; left: 721px; top: 355px"
@@ -4759,6 +4786,28 @@
                                         <span
                                             style="--outline-color: #27ff00; left: 855px; top: 324px"
                                             class="location-map-dot"></span>
+                                    </div>
+
+                                    <div
+                                        class="dots-map-2024 dots-monitoreo d-none"
+                                        id="cusiana-sre-11">
+                                        <!-- <span
+                                            style="--outline-color: #27ff00; left: 721px; top: 355px"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #27ff00; left: 855px; top: 324px"
+                                            class="location-map-dot"></span> -->
+                                    </div>
+
+                                    <div
+                                        class="dots-map-2024 dots-monitoreo d-none"
+                                        id="cusiana-sre-12">
+                                        <!-- <span
+                                            style="--outline-color: #27ff00; left: 721px; top: 355px"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #27ff00; left: 855px; top: 324px"
+                                            class="location-map-dot"></span> -->
                                     </div>
 
                                     <div
@@ -4810,103 +4859,9 @@
 
                                     <div
                                         class="dots-map-2024 dots-monitoreo d-none"
-                                        id="cusiana-sre-14">
-                                        <span style="left: 397px; top: 304px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 390px; top: 320px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 415px; top: 307px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 436px; top: 310px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 418px; top: 328px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 442px; top: 320px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 435px; top: 347px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 446px; top: 339px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 459px; top: 330px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 469px; top: 320px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 461px; top: 352px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 477px; top: 342px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 491px; top: 330px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 509px; top: 320px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 502px; top: 343px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 510px; top: 333px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 526px; top: 324px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 519px; top: 343px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 541px; top: 328px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 540px; top: 343px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 504px; top: 368px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 528px; top: 369px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 503px; top: 385px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 522px; top: 397px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 536px; top: 388px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 551px; top: 378px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 574px; top: 366px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 707px; top: 311px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 760px; top: 336px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 607px; top: 380px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 640px; top: 393px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 563px; top: 427px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 615px; top: 444px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 633px; top: 429px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 6500px; top: 415px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 673px; top: 405px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 689px; top: 394px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 710px; top: 380px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 734px; top: 369px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 772px; top: 381px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 792px; top: 392px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 781px; top: 416px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 767px; top: 432px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 754px; top: 451px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 734px; top: 469px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 712px; top: 488px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 669px; top: 480px"
-                                            class="location-map-dot"></span>
-                                        <span style="left: 647px; top: 466px"
-                                            class="location-map-dot"></span>
+                                        id="cusiana-sre-14">                                        
+                                        <!-- <span style="left: 647px; top: 466px"
+                                            class="location-map-dot"></span> -->
                                     </div>
 
                                     <div
@@ -5177,6 +5132,14 @@
                                         <span
                                             style="--outline-color: #ff0000; left: 743px; top: 368px"
                                             class="location-map-dot"></span>
+                                    </div>
+
+                                    <div
+                                        class="dots-map-2024 dots-monitoreo d-none"
+                                        id="cusiana-sre-21">
+                                        <!-- <span
+                                            style="--outline-color: #00ccff; left: 743px; top: 373px"
+                                            class="location-map-dot"></span> -->
                                     </div>
 
                                     <div
